// Vitest Snapshot v1

exports[`TidligstMuligeUttak > oppdaterer valgt knapp og tegner graph når brukeren klikker på en knapp 1`] = `
<DocumentFragment>
  <p
    class="_paragraph_d3b588 navds-body-long"
  >
    Du kan tidligst ta ut alderspensjon når du er 62 år og 10 måneder. Hvis du går av senere, får du høyere pensjon i året.
  </p>
  <div
    class="navds-read-more navds-read-more--medium"
  >
    <button
      aria-expanded="false"
      class="navds-read-more__button navds-body-short"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="navds-read-more__expand-icon"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="navds-read-more__expand-icon navds-read-more__expand-icon--filled"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="m12 18.121-8.06-8.06 2.12-2.122L12 13.88l5.94-5.94 2.12 2.122L12 18.12Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <span>
        Hva avgjør tidligste uttakstidspunkt?
      </span>
    </button>
    <div
      style="height: 0px; overflow: hidden;"
    >
      <div
        aria-hidden="true"
        style="display: none;"
      >
        <div
          class="navds-read-more__content navds-body-long"
        >
          //TODO
        </div>
      </div>
    </div>
  </div>
  <h2
    class="navds-heading navds-heading--xsmall"
  >
    Når vil du ta ut alderspensjon?
  </h2>
  <ul
    class="navds-chips _chipsWrapper_d3b588 _chipsWrapper__hasGap_d3b588 navds-chips--medium navds-body-short navds-body-short--small"
  >
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          62 år og 10 md.
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          63 år
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          64 år
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          65 år
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          66 år
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          67 år
        </span>
      </button>
    </li>
  </ul>
  <div
    class="navds-read-more navds-read-more--medium _readMore__hasPadding_d3b588 navds-read-more--open"
  >
    <button
      aria-expanded="true"
      class="navds-read-more__button navds-body-short"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="navds-read-more__expand-icon"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="navds-read-more__expand-icon navds-read-more__expand-icon--filled"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="m12 18.121-8.06-8.06 2.12-2.122L12 13.88l5.94-5.94 2.12 2.122L12 18.12Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <span>
        Vis flere aldere
      </span>
    </button>
    <div
      style="height: 0px; overflow: hidden; transition: height 250ms ease 0ms;"
    >
      <div
        aria-hidden="false"
        style=""
      >
        <div
          class="navds-read-more__content navds-body-long"
        >
          <ul
            class="navds-chips _chipsWrapper_d3b588 _chipsWrapper__hasGap_d3b588 navds-chips--medium navds-body-short navds-body-short--small"
          >
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  68 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  69 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  70 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  71 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="true"
                class="navds-chips__chip navds-chips__toggle navds-chips--icon-left"
              >
                <svg
                  aria-hidden="true"
                  class="navds-chips__toggle-icon"
                  fill="none"
                  focusable="false"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M18.201 6 20 7.89 8.78 19 4 14.396 5.794 12.5l2.98 2.802L18.201 6Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
                <span
                  class="navds-chips__chip-text"
                >
                  72 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  73 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  74 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  75 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  76 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  77 år
                </span>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <h3
    class="navds-heading navds-heading--xsmall navds-typo--spacing"
  >
    Årlig pensjon hvis du starter uttak ved 72 år
  </h3>
  <div
    class="ct-chart _chartWrapper_2cd409"
  />
</DocumentFragment>
`;

exports[`TidligstMuligeUttak > viser feilmelding om henting av pensjonberegning feiler 1`] = `
<DocumentFragment>
  <div
    class="navds-alert navds-alert--error navds-alert--medium"
  >
    <svg
      aria-labelledby="title-r6"
      class="navds-alert__icon"
      fill="none"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="title-r6"
      >
        Feil
      </title>
      <path
        clip-rule="evenodd"
        d="M0 11.976C.013 5.372 5.395 0 11.999 0 18.639.013 24.012 5.406 24 12.022 23.986 18.627 18.603 24 12 24h-.023a11.924 11.924 0 0 1-8.48-3.531A11.923 11.923 0 0 1 0 11.976Zm17-3.547L15.571 7 12 10.572 8.429 7 7 8.429 10.572 12 7 15.571 8.429 17 12 13.428 15.571 17 17 15.571 13.428 12 17 8.429Z"
        fill="#C30000"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="navds-alert__wrapper navds-body-long"
    >
      <h2
        class="navds-heading navds-heading--small navds-typo--spacing"
      >
        Vi klarte ikke å hente tidligste mulige uttaksladeren din. Prøv igjen senere.
      </h2>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TidligstMuligeUttak > viser loading og deretter riktig header, tekst og knapper 1`] = `
<DocumentFragment>
  <p
    class="_paragraph_d3b588 navds-body-long"
  >
    Du kan tidligst ta ut alderspensjon når du er 62 år og 10 måneder. Hvis du går av senere, får du høyere pensjon i året.
  </p>
  <div
    class="navds-read-more navds-read-more--medium"
  >
    <button
      aria-expanded="false"
      class="navds-read-more__button navds-body-short"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="navds-read-more__expand-icon"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="navds-read-more__expand-icon navds-read-more__expand-icon--filled"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="m12 18.121-8.06-8.06 2.12-2.122L12 13.88l5.94-5.94 2.12 2.122L12 18.12Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <span>
        Hva avgjør tidligste uttakstidspunkt?
      </span>
    </button>
    <div
      style="height: 0px; overflow: hidden;"
    >
      <div
        aria-hidden="true"
        style="display: none;"
      >
        <div
          class="navds-read-more__content navds-body-long"
        >
          //TODO
        </div>
      </div>
    </div>
  </div>
  <h2
    class="navds-heading navds-heading--xsmall"
  >
    Når vil du ta ut alderspensjon?
  </h2>
  <ul
    class="navds-chips _chipsWrapper_d3b588 _chipsWrapper__hasGap_d3b588 navds-chips--medium navds-body-short navds-body-short--small"
  >
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          62 år og 10 md.
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          63 år
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          64 år
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          65 år
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          66 år
        </span>
      </button>
    </li>
    <li>
      <button
        aria-pressed="false"
        class="navds-chips__chip navds-chips__toggle"
      >
        <span
          class="navds-chips__chip-text"
        >
          67 år
        </span>
      </button>
    </li>
  </ul>
  <div
    class="navds-read-more navds-read-more--medium navds-read-more--open"
  >
    <button
      aria-expanded="true"
      class="navds-read-more__button navds-body-short"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="navds-read-more__expand-icon"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="navds-read-more__expand-icon navds-read-more__expand-icon--filled"
        fill="none"
        focusable="false"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="m12 18.121-8.06-8.06 2.12-2.122L12 13.88l5.94-5.94 2.12 2.122L12 18.12Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <span>
        Vis flere aldere
      </span>
    </button>
    <div
      style="height: 0px; overflow: hidden; transition: height 250ms ease 0ms;"
    >
      <div
        aria-hidden="false"
        style=""
      >
        <div
          class="navds-read-more__content navds-body-long"
        >
          <ul
            class="navds-chips _chipsWrapper_d3b588 _chipsWrapper__hasGap_d3b588 navds-chips--medium navds-body-short navds-body-short--small"
          >
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  68 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  69 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  70 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  71 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  72 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  73 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  74 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  75 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  76 år
                </span>
              </button>
            </li>
            <li>
              <button
                aria-pressed="false"
                class="navds-chips__chip navds-chips__toggle"
              >
                <span
                  class="navds-chips__chip-text"
                >
                  77 år
                </span>
              </button>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
